Neuen Test erstellt, da das SUbjectBehavior also die ID von dem SBD nicht in die richtige Variable gespeichert wird - > wird es immer noch nicht